--- a/src/app/demo/components/pages/inscription/step2-component.html
+++ b/src/app/demo/components/pages/inscription/step2-component.html
@@ -3,21 +3,36 @@
     <p>
         Complete todos los campos para continuar.
     </p>
+    <p-messages [(value)]="presenter.messages" [enableService]="false" />
     <form [formGroup]="presenter.formStep2">
         <div class="grid p-fluid mt-3">
-            <div class="field col-12 md:col-6">
+            <div *ngIf="!studentsList.length" class="field col-12 md:col-6">
+                <p-skeleton height="2rem" styleClass="mb-2" />
+            </div>
+            <div *ngIf="!studentsList.length" class="col-12 md:col-1">
+                <p-skeleton shape="circle" size="2rem" styleClass="mr-2" />
+            </div>
+            <div *ngIf="studentsList.length" class="field col-12 md:col-6">
                 <span class="p-float-label">
                     <p-autoComplete 
-                    id="inputtext"
-            formControlName="student"
-            [suggestions]="filteredCountries" 
-            (completeMethod)="filterCountry($event)" 
-            field="name" />
-                    <label for="inputtext">Ingrese el nombre del
+                    id="studentOne"
+                    formControlName="student"
+                    [suggestions]="filteredStudents" 
+                    (completeMethod)="filterStudents($event)" 
+                    field="name">
+                        <ng-template let-student pTemplate="item">
+                            <div class="flex align-items-center gap-2">
+                                
+                                <div>{{ student.name + ' ' + student.surnames}}</div>
+                            </div>
+                        </ng-template>
+                </p-autoComplete>
+                    <label for="studentOne">Ingrese el nombre del
                         estudiante</label>
                 </span>
+                
             </div>
-            <div *ngIf="!presenter.studentTwoRequired" class="col-12 md:col-1">
+            <div *ngIf="!presenter.studentTwoRequired && studentsList.length" class="col-12 md:col-1">
                 <p-button icon="pi pi-user-plus" [rounded]="true" [outlined]="true"
                 pTooltip="Agregar un segundo estudiante" tooltipPosition="bottom" 
                 (click)="presenter.showStudentTwo()" />
@@ -25,12 +40,19 @@
             <div *ngIf="presenter.studentTwoRequired" class="col-12 md:col-5">
                 <span class="p-float-label">
                     <p-autoComplete 
-                    id="inputtext"
-            formControlName="studentTwo"
-            [suggestions]="filteredCountries" 
-            (completeMethod)="filterCountry($event)" 
-            field="name" />
-                    <label for="inputtext">Ingrese el nombre del
+                    id="studentTwo"
+                    formControlName="studentTwo"
+                    [suggestions]="filteredSecondStudents" 
+                    (completeMethod)="filterSecondStudents($event)" 
+                    field="name">
+                        <ng-template let-student pTemplate="item">
+                            <div class="flex align-items-center gap-2">
+                                
+                                <div>{{ student.name + ' ' + student.surnames}}</div>
+                            </div>
+                        </ng-template>
+                </p-autoComplete>
+                    <label for="studentTwo">Ingrese el nombre del
                         segundo estudiante</label>
                 </span>
             </div>
@@ -50,9 +72,9 @@
                 </p-card>
             </div>
             <div class="col-12 md:col-6">
-                <p-card *ngIf="presenter.studentTwoIsValid" header="Datos del estudiante">
+                <p-card *ngIf="presenter.studentTwoIsValid" header="Datos del segundo estudiante">
                     <p>Código: {{presenter.dataStudentTwoSelected.code}}</p>
-                    <p>Nombres: {{presenter.dataStudentTwoSelected.name + ' ' + presenter.dataStudentOneSelected.surnames}}</p>
+                    <p>Nombres: {{presenter.dataStudentTwoSelected.name + ' ' + presenter.dataStudentTwoSelected.surnames}}</p>
                     <p>Correo: {{presenter.dataStudentTwoSelected.email}}</p>
                     <p>Celular: {{presenter.dataStudentTwoSelected.phone}}</p>
                 </p-card>
