--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.scss
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.scss
@@ -18,3 +18,11 @@
     margin-top: -20px; 
     padding: 0 !important;
 }
+
+.text-align-center {
+    text-align: center;
+}
+
+.full-width {
+    width: 100%;
+}
