--- a/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
+++ b/src/app/demo/components/pages/inscription-tracking/inscription-tracking.component.html
@@ -86,6 +86,26 @@
                 </ng-template>
             </p-table>
         </div>
+        <div class="card">
+            <p-table [value]="skeletonRows" responsiveLayout="scroll">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th style="width:60%">Título de tesis</th>
+                        <th style="width:20%">Revisor</th>
+                        <th style="width:10%">Estado</th>
+                        <th style="width:10%"></th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td><p-skeleton /></td>
+                        <td><p-skeleton /></td>
+                        <td><p-skeleton /></td>
+                        <td><p-skeleton /></td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
         </div>
 
     </div>
