--- a/src/app/demo/components/pages/inscription/step2-component.html
+++ b/src/app/demo/components/pages/inscription/step2-component.html
@@ -5,76 +5,135 @@
     </p>
     <p-messages [(value)]="presenter.messages" [enableService]="false" />
     <form [formGroup]="presenter.formStep2">
-        <div class="grid p-fluid mt-3">
-            <div *ngIf="!studentsList.length" class="field col-12 md:col-6">
-                <p-skeleton height="2rem" styleClass="mb-2" />
-            </div>
-            <div *ngIf="!studentsList.length" class="col-12 md:col-1">
-                <p-skeleton shape="circle" size="2rem" styleClass="mr-2" />
-            </div>
-            <div *ngIf="studentsList.length" class="field col-12 md:col-6">
-                <span class="p-float-label">
-                    <p-autoComplete 
-                    id="studentOne"
-                    formControlName="student"
-                    [suggestions]="filteredStudents" 
-                    (completeMethod)="filterStudents($event)" 
-                    field="name">
-                        <ng-template let-student pTemplate="item">
-                            <div class="flex align-items-center gap-2">
-                                
-                                <div>{{ student.name + ' ' + student.surnames}}</div>
-                            </div>
-                        </ng-template>
-                </p-autoComplete>
-                    <label for="studentOne">Ingrese el nombre del
-                        estudiante</label>
-                </span>
-                
-            </div>
-            <div *ngIf="!presenter.studentTwoRequired && studentsList.length" class="col-12 md:col-1">
-                <p-button icon="pi pi-user-plus" [rounded]="true" [outlined]="true"
-                pTooltip="Agregar un segundo estudiante" tooltipPosition="bottom" 
-                (click)="presenter.showStudentTwo()" />
-            </div>
-            <div *ngIf="presenter.studentTwoRequired" class="col-12 md:col-5">
-                <span class="p-float-label">
-                    <p-autoComplete 
-                    id="studentTwo"
-                    formControlName="studentTwo"
-                    [suggestions]="filteredSecondStudents" 
-                    (completeMethod)="filterSecondStudents($event)" 
-                    field="name">
-                        <ng-template let-student pTemplate="item">
-                            <div class="flex align-items-center gap-2">
-                                
-                                <div>{{ student.name + ' ' + student.surnames}}</div>
-                            </div>
-                        </ng-template>
-                </p-autoComplete>
-                    <label for="studentTwo">Ingrese el nombre del
-                        segundo estudiante</label>
-                </span>
-            </div>
-            <div *ngIf="presenter.studentTwoRequired" class="col-12 md:col-1">
-                <p-button icon="pi pi-times" [rounded]="true" severity="danger" [outlined]="true" 
-                pTooltip="Eliminar el segundo estudiante" tooltipPosition="bottom" 
-                (click)="presenter.hideStudentTwo()" />
-            </div>
+        <style>
+            .p-field {
+                margin-bottom: 1rem;
+            }
+            
+            .p-error-message {
+                display: flex;
+                align-items: center;
+                margin-top: 0.5rem;
+                color: #dc3545;
+            }
+            
+            .error-icon {
+                margin-right: 0.5rem;
+                font-size: 1.5rem;
+                color: #dc3545;
+            }
+            
+        </style>
+        <div [ngSwitch]="getStudentListProcess">
+            <ng-template [ngSwitchCase]="'charging'">
+              <ng-container *ngTemplateOutlet="studentListSkeleton"></ng-container>
+            </ng-template>
+            <ng-template [ngSwitchCase]="'error'">
+              <ng-container *ngTemplateOutlet="studentListError"></ng-container>
+            </ng-template>
+            <ng-template [ngSwitchCase]="'complete'">
+              <ng-container *ngTemplateOutlet="studentList"></ng-container>
+            </ng-template>
+            <ng-template ngSwitchDefault>
+              <p>Invalid state</p>
+            </ng-template>
         </div>
+        <ng-template #studentListError>
+            <div class="p-error-message">
+                <i class="pi pi-times-circle error-icon"></i>
+                <span>Ha ocurrido un error al traer la información.</span>
+                <button pButton type="button" icon="pi pi-refresh"
+                    class="p-button-text p-button-danger" (click)="callGetStudentList()"></button>
+            </div>
+        </ng-template>
+        <ng-template #studentListSkeleton>
+            <div class="grid p-fluid mt-3">
+                <div *ngIf="!studentsList.length" class="field col-12 md:col-6">
+                    <p-skeleton height="2rem" styleClass="mb-2" />
+                </div>
+                <div *ngIf="!studentsList.length" class="col-12 md:col-1">
+                    <p-skeleton shape="circle" size="2rem" styleClass="mr-2" />
+                </div>
+            </div>
+        </ng-template>
+        <ng-template #studentList>
+            <div class="grid p-fluid mt-3">
+                <div *ngIf="studentsList.length" class="field col-12 md:col-6">
+                    <span class="p-float-label">
+                        <p-autocomplete
+                            id="studentOne"
+                            formControlName="student"
+                            [suggestions]="filteredStudents"
+                            (completeMethod)="filterStudents($event)"
+                            field="name">
+                            <ng-template let-student pTemplate="item">
+                                <div class="flex align-items-center gap-2">
+    
+                                    <div>{{ student.name + ' ' +
+                                        student.surnames}}</div>
+                                </div>
+                            </ng-template>
+                        </p-autocomplete>
+                        <label for="studentOne">Ingrese el nombre del
+                            estudiante</label>
+                    </span>
+    
+                </div>
+                <div *ngIf="!presenter.studentTwoRequired"
+                    class="col-12 md:col-1">
+                    <p-button icon="pi pi-user-plus" [rounded]="true"
+                        [outlined]="true"
+                        pTooltip="Agregar un segundo estudiante"
+                        tooltipPosition="bottom"
+                        (click)="presenter.showStudentTwo()" />
+                </div>
+                <div *ngIf="presenter.studentTwoRequired" class="col-12 md:col-5">
+                    <span class="p-float-label">
+                        <p-autocomplete
+                            id="studentTwo"
+                            formControlName="studentTwo"
+                            [suggestions]="filteredSecondStudents"
+                            (completeMethod)="filterSecondStudents($event)"
+                            field="name">
+                            <ng-template let-student pTemplate="item">
+                                <div class="flex align-items-center gap-2">
+    
+                                    <div>{{ student.name + ' ' +
+                                        student.surnames}}</div>
+                                </div>
+                            </ng-template>
+                        </p-autocomplete>
+                        <label for="studentTwo">Ingrese el nombre del
+                            segundo estudiante</label>
+                    </span>
+                </div>
+                <div *ngIf="presenter.studentTwoRequired" class="col-12 md:col-1">
+                    <p-button icon="pi pi-times" [rounded]="true" severity="danger"
+                        [outlined]="true"
+                        pTooltip="Eliminar el segundo estudiante"
+                        tooltipPosition="bottom"
+                        (click)="presenter.hideStudentTwo()" />
+                </div>
+            </div>
+        </ng-template>
+        
         <div class="grid p-fluid">
             <div class="col-12 md:col-6">
-                <p-card *ngIf="presenter.studentOneIsValid" header="Datos del estudiante">
+                <p-card *ngIf="presenter.studentOneIsValid"
+                    header="Datos del estudiante">
                     <p>Código: {{presenter.dataStudentOneSelected.code}}</p>
-                    <p>Nombres: {{presenter.dataStudentOneSelected.name + ' ' + presenter.dataStudentOneSelected.surnames}}</p>
+                    <p>Nombres: {{presenter.dataStudentOneSelected.name + ' ' +
+                        presenter.dataStudentOneSelected.surnames}}</p>
                     <p>Correo: {{presenter.dataStudentOneSelected.email}}</p>
                     <p>Celular: {{presenter.dataStudentOneSelected.phone}}</p>
                 </p-card>
             </div>
             <div class="col-12 md:col-6">
-                <p-card *ngIf="presenter.studentTwoIsValid" header="Datos del segundo estudiante">
+                <p-card *ngIf="presenter.studentTwoIsValid"
+                    header="Datos del segundo estudiante">
                     <p>Código: {{presenter.dataStudentTwoSelected.code}}</p>
-                    <p>Nombres: {{presenter.dataStudentTwoSelected.name + ' ' + presenter.dataStudentTwoSelected.surnames}}</p>
+                    <p>Nombres: {{presenter.dataStudentTwoSelected.name + ' ' +
+                        presenter.dataStudentTwoSelected.surnames}}</p>
                     <p>Correo: {{presenter.dataStudentTwoSelected.email}}</p>
                     <p>Celular: {{presenter.dataStudentTwoSelected.phone}}</p>
                 </p-card>
@@ -84,7 +143,8 @@
             <p-button (click)="backStep()" label="Regresar" [outlined]="true"
                 icon="pi pi-angle-left" iconPos="left" />
             <p-button (click)="nextStep()" label="Siguiente"
-                icon="pi pi-angle-right" iconPos="right" [disabled]="!presenter.studentOneIsValid || presenter.validatonForStudentTwo()" />
+                icon="pi pi-angle-right" iconPos="right"
+                [disabled]="!presenter.studentOneIsValid || presenter.validatonForStudentTwo()" />
         </div>
     </form>
 </div>
