--- a/src/app/demo/components/pages/users/users.component.scss
+++ b/src/app/demo/components/pages/users/users.component.scss
@@ -1,3 +1,32 @@
 .text-error {
     color: #e24c4c;
 }
+
+.text-align-center {
+    text-align: center;
+}
+  
+  .error-content {
+    margin: auto;
+    max-width: 400px;
+    padding: 2rem;
+    border: 1px solid #f5c6cb;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .error-icon {
+    font-size: 5rem;
+    color: #dc3545;
+  }
+  
+  .error-title {
+    color: #dc3545;
+    margin-top: 1rem;
+  }
+  
+  .error-message {
+    margin: 1rem 0;
+    color: #6c757d;
+  }
